# andean-dev

.github/workflows/: master_andean-dev.yml
source/repos/Andean Dev/: Andean Dev.csproj  Andean Dev.sln  Program.cs  Startup.cs  WeatherForecast.cs
source/repos/Andean Dev/ClientApp/: README.md  angular.json  package-lock.json  package.json
source/repos/Andean Dev/ClientApp/src/: index.html
source/repos/Andean Dev/ClientApp/src/app/fetch-data/: fetch-data.component.ts
source/repos/Andean Dev/ClientApp/src/app/footer/: footer.component.css  footer.component.html
source/repos/Andean Dev/ClientApp/src/app/nav-menu/: nav-menu.component.html
source/repos/Andean Dev/Controllers/: WeatherForecastController.cs
source/repos/Andean Dev/Pages/: Error.cshtml.cs  _ViewImports.cshtml
source/repos/Andean Dev/Properties/: launchSettings.json
source/repos/Andean Dev/Properties/ServiceDependencies/andean-dev - Web Deploy/: profile.arm.json
source/repos/Practice_1/: CMakeLists.txt  Practice_1.cpp  Practice_1.h
