# CMakeList.txt : CMake project for Practice_1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Practice_1")

# Add source to this project's executable.
add_executable (Practice_1 "Practice_1.cpp" "Practice_1.h")

# TODO: Add tests and install targets if needed.
